# CodexVid

video-content-ai/: .dockerignore  .env.example  .gitignore  APP_DATAFLOW.md  ARCHITECTURE.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  TESTING.md  UI_CLICK_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
video-content-ai/app/: __init__.py  cli.py  config.py  main.py
video-content-ai/app/api/: __init__.py  codexvid.py  health.py
video-content-ai/app/codexvid/: __init__.py  chat.py  chunking.py  retrieval_utils.py  session.py  teaching.py  timestamp_utils.py  transcription.py  vector_store.py
video-content-ai/app/core/: llm.py
video-content-ai/app/prompts/: __init__.py
video-content-ai/app/services/: aws_transcribe.py  transcription.py  video.py
video-content-ai/app/static/: index.html  learn.css  learn.html  learn.js
video-content-ai/tests/: test_api.py  test_aws_transcribe.py  test_codexvid_chunking.py  test_codexvid_upload_api.py  test_retrieval_utils.py  test_teaching_pipeline.py  test_timestamp_utils.py
